--- a/UserRegisteration/UserRegisteration.csproj
+++ b/UserRegisteration/UserRegisteration.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegexSample.cs" />
+    <Compile Include="UserRegistrationFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
